# autometrics-rs

autometrics/: Cargo.toml
autometrics/src/exemplars/: tracing_opentelemetry.rs
examples/opentelemetry-push/: Cargo.toml
examples/opentelemetry-push-custom/: Cargo.toml
